# tg-gemini

./: .gitignore  PKG-INFO  README.md  pyproject.toml
src/tg_gemini/: __init__.py  bot.py  card.py  claude.py  cli.py  commands.py  config.py  dedup.py  engine.py  events.py  gemini.py  i18n.py  markdown.py  models.py  ratelimit.py  session.py  sessions.py  skills.py  streaming.py  telegram_platform.py
